--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -80,14 +80,65 @@
   color: #00adb5
 }
 
-.navLink {
-  color: #eeeeee;
-  background-color: #393e46;
-  margin-bottom: 1vh;
+.scrollLink {
+  color: #00adb5;
 }
 
+.scrollLink:hover {
+  color: #777777;
+  text-decoration: underline;
+  scale: 1.025;
+}
 
+::-webkit-scrollbar {
+  background-color: #222831;
+  width: 10px;
+}
 
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 15px #333333;
+  border-radius: 25px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 25px;
+  -webkit-box-shadow: inset 0 0 15px #00adb5;
+}
+
+.topButton {
+  color: #00adb5;
+  background-color: #777777;
+  /* float: right; */
+  position: fixed;
+  bottom: 5%;
+  left: 95%;
+  border-radius: 40%;
+  cursor: pointer;
+  text-align: center;
+  box-shadow: 2px 2px 5px #00adb5;
+}
+
+.topButton:hover {
+  scale: 1.1;
+}
+
+a {
+  color: #777777;
+}
+
+a:hover {
+  color: #00adb5;
+}
+
+.sideBar {
+  position: fixed;
+  bottom: 35%;
+  left: 0.01%;
+}
+
+.iconSpacing {
+  margin-bottom: 1vh;
+}
 
 
 h1 {
