--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -2,6 +2,11 @@
   background-color: #222831;
 }
 
+.fancyName {
+  text-shadow: 5px 5px #636971;
+  ;
+}
+
 .mainHeadings {
   color: #00adb5;
   font-size: 10vh;
@@ -24,6 +29,10 @@
   background-color: #393e46;
   color: #00adb5;
   border-color: #eeeeee;
+}
+
+.button:hover {
+  scale: 1.05;
 }
 
 .mainImg {
@@ -82,6 +91,7 @@
 
 .scrollLink {
   color: #00adb5;
+  font-size: 1vw;
 }
 
 .scrollLink:hover {
@@ -123,11 +133,12 @@
 }
 
 a {
-  color: #777777;
+  color: #00adb5;
 }
 
 a:hover {
-  color: #00adb5;
+  color: #777777;
+  cursor: pointer;
 }
 
 .sideBar {
@@ -137,8 +148,13 @@ a:hover {
 }
 
 .iconSpacing {
-  margin-bottom: 1vh;
+  margin-bottom: 2vh;
 }
+
+
+
+
+
 
 
 h1 {
