--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -36,7 +36,7 @@
 }
 
 .mainImg {
-  width: 80%;
+  width: 50%;
   border: #00adb5;
   border-style: solid;
   border-radius: 20%;
@@ -91,7 +91,8 @@
 
 .scrollLink {
   color: #00adb5;
-  font-size: 1vw;
+  font-size: 1vw 1vh;
+  padding: 1vw;
 }
 
 .scrollLink:hover {
@@ -143,12 +144,21 @@ a:hover {
 
 .sideBar {
   position: fixed;
-  bottom: 35%;
-  left: 0.01%;
+  bottom: 0%;
+  left: 0.5%;
 }
 
-.iconSpacing {
+.icon {
   margin-bottom: 2vh;
+  opacity: 0.1;
+  color: #777777;
+}
+
+.icon:hover {
+  scale: 1.3;
+  color: #00adb5;
+  opacity: 1;
+  cursor: pointer;
 }
 
 
