--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -54,11 +54,14 @@
 }
 
 .projectImg {
-  width: 100%;
+  width: 90%;
   border: #00adb5;
   border-style: solid;
   border-radius: 20%;
   border-color: #00adb5;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 .projectHeadings {
@@ -150,7 +153,7 @@ a:hover {
 
 .icon {
   margin-bottom: 2vh;
-  opacity: 0.1;
+  opacity: 0.3;
   color: #777777;
 }
 
