fixed some styling

--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -66,13 +66,13 @@
 
 .projectHeadings {
   color: #00adb5;
-  font-size: 3vw;
+  font-size: 3em;
   font-family: sans-serif;
 }
 
 .smallerProjectHeadings {
   color: #eeeeee;
-  font-size: 2vw;
+  font-size: 2em;
   font-family: sans-serif;
 }
 
@@ -125,7 +125,7 @@
   /* float: right; */
   position: fixed;
   bottom: 5%;
-  left: 95%;
+  left: 93%;
   border-radius: 40%;
   cursor: pointer;
   text-align: center;
